--- a/package.json
+++ b/package.json
@@ -27,12 +27,10 @@
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "razorpay": "^2.9.6"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.9"
   }
 }
