--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
+    "method-override": "^3.0.0",
     "mongoose": "^8.7.0",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
