--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "body-parser": "^1.20.3",
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.7",
     "crypto-random-string": "^5.0.0",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
