--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "express-session": "^1.18.1",
     "express-validator": "^7.2.0",
     "method-override": "^3.0.0",
-    "mongoose": "^8.7.0",
+    "mongoose": "^7.0.0",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^6.10.1",
@@ -36,6 +36,7 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
     "razorpay": "^2.9.6",
-    "twilio": "^5.5.2"
+    "twilio": "^5.5.2",
+    "urban-pro": "file:"
   }
 }
